--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -54,10 +54,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#EBF2FA]</td>
-        <td class="secondary">[#05668D]</td>
-        <td class="accent1">[#679436]</td>
-        <td class="accent2">[#A5BE00]</td>
+        <td class="primary">#EBF2FA</td>
+        <td class="secondary">#05668D</td>
+        <td class="accent1">#679436</td>
+        <td class="accent2">#A5BE00</td>
       </tr>
     </table>
 
@@ -67,7 +67,7 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: Anton
+      Heading Font: Koulen
       <!-- change this -->
     </h4>
     <h4>
