--- a/genie/site-plan.html
+++ b/genie/site-plan.html
@@ -24,7 +24,7 @@
 
 
       <h3>Audience</h3>
-      <p>Those interested in helping or investing in the app's production.</p>  <!-- change this -->
+      <p>Those interested in helping or investing in the app's production.</p>
 
       <hr>
       <h2>Branding</h2>
@@ -40,9 +40,6 @@
       <h3>
         Color Palette
       </h3>
-      <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
-
-      <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
       Palette URL: <a href="https://coolors.co/14110f-6e8387-a4b8c4-fcfafa-81d652" target="_blank">https://coolors.co/14110f-6e8387-a4b8c4-fcfafa-81d652</a>
 
 
@@ -85,11 +82,11 @@
       <h3>
         Navigation
       </h3>
-      <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
+      
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">About Me</a>
+        <a href="#">Contribute</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +97,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          About Me
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Contribute
         </div>
 
         <div class="top">
@@ -132,20 +129,20 @@
         <img src="#" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>About Me</h3>
       <p>
-        [Written copy for the Page 2 here]
+        [Written copy for the About Me here]
       </p>
-      <p>Images for the Page 2</p>
+      <p>Images for the About Me</p>
         <img src="#" alt="image for page">
         <img src="#" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Contribute</h3>
       <p>
-        [Written copy for the Page 3 here]
+        [Written copy for the Contribute here]
       </p>
-      <p>Images for the Page 3</p>
+      <p>Images for the Contribute</p>
         <img src="#" alt="image for page3">
         <img src="#" alt="image for page3">
 
@@ -163,17 +160,17 @@
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>About me</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="#" alt="about me wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Contribute</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        [Any additional details about Contribute that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="#" alt="contribute wireframe">
     </main>
   </body>
 
