--- a/genie/site-plan.html
+++ b/genie/site-plan.html
@@ -45,7 +45,7 @@
 
       <table class="colors">
         <tr><th>Background 1</th><th>Background 2</th><th>Secondary 1</th><th>Secondary 2</th><th>Accent 1</th><th>Accent 2</th></tr>
-        <tr><td class="background1">[#fcfafa]</td><td class="background2">[#a4b8c4]</td><td class="secondary1">[#6e8387]</td><td class="secondary2">[#14110F]</td><td class="accent1">[#81d652]</td><td class="accent2">[#489ff8]</td></tr>
+        <tr><td class="background1">#fcfafa</td><td class="background2">#a4b8c4</td><td class="secondary1">#6e8387</td><td class="secondary2">#14110F</td><td class="accent1">#81d652</td><td class="accent2">#489ff8</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -58,10 +58,10 @@
       <h4>
         Heading Font: Lato 
       </h4>
-      <h4 id="accentFont">
+      <h4>
         Accent Font: Dancing Script 
       </h4>
-      <h4 id="pFont">
+      <h4>
         Paragraph Font: Courier Prime
       </h4>
       <h3>
