--- a/genie/site-plan.html
+++ b/genie/site-plan.html
@@ -85,8 +85,8 @@
       
       <nav>
         <a href="#">Home</a>
-        <a href="#">About Me</a>
-        <a href="#">Contribute</a>
+        <a href="#">Situation</a>
+        <a href="#">Changes</a>
       </nav>
       <hr>
       <h2>
@@ -97,10 +97,10 @@
           Home
         </div>
         <div class="sm-page2">
-          About Me
+          Situation
         </div>
         <div class="sm-page3">
-          Contribute
+          Changes
         </div>
 
         <div class="top">
@@ -121,30 +121,40 @@
         Content
       </h2>
       <h3>Home page</h3>
+      <p>Very rough draft!  Will revamp wording next week.</p>
       <p>
-        [Written copy for the home page here]
+       The dream: I would like to have it self-paced with all of the restrictions removed all of the stumbling blocks put aside.  I chose the name of Genie Greenie to be memorable and translatable across various languages. I believe green is the obvious color choice for Family History. I think that it needs to be mobile first and desktop second. As a consultant, the bane of my existence is password recovery. I wish That we lived in a world where we didn’t even need passwords. So I would like to build this app with all training with open access. Some features like progress tracking will obviously need an authentication piece. But I don’t want any of the training to be hindered by a lost or forgotten password. I believe in building Zion right here and right now. I do not want to charge money or giveaway certain liberties to the whims of advertising. I want this to be ad free password, free hassle, free, and a cornerstone of Zion.<br />
+</p>
+<p>Why I think it will work: I created a video series to test out my theories on this method. It is proven to be quite successful in helping others learn how to link sources in FamilySearch. Genie Greenie now is the brainchild to take that trial run and apply it to the rest of the family history field.<br />
+</p>
+<p>How do we get there: My dream is daunting at best for a large army. I’m just myself. And I need your help, do you have the skills to help program the apps? Do you have the funding to help recruit? Do you have the social connections to help advertise?<br />
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="./images/app1.png" alt="App Mockup No 1" width="50%">
+        <img src="./images/sl101.png" alt="SourceLinker 101" width="50%">
 
       </ul>
-      <h3>About Me</h3>
-      <p>
-        [Written copy for the About Me here]
+      <h3>The Current Situation</h3>
+      <p>A few years ago, I received my first Family History calling.  The learning curve I experienced was brutal!  Locals were only able to help during the day which didn’t work because I had a full time job.  I found the lack of free and engaging content incredibly frustrating. Many hours were spent watching long and often boring tutorial videos. While they do have great information, it was such a chore to keep motivated.<br />
       </p>
-      <p>Images for the About Me</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
-
+        <p>As a stake consultant I would always ask the ward consultants how they learned how to do genealogy. The overwhelming response was something akin to pulling teeth. Many said that If it wasn’t for the spirit of Elijah, they wouldn’t have kept going. I find it alarming that there are so few accredited institutions in this specific field and they all seem to be safeguarding the training practices. You either have to relocate or have a lot of money or want to do it professionally in order to actually get access to the resources that you need to succeed. <br />
+        </p>
+          <p>Another pain point for many beginners is that genealogy is such a wide field. It is near impossible for one solo person to be involved in every single aspect that genealogy provides. I believe in microskills.  Skills such as biography, psychology, sociology, etc.  We need to become micro masters of individual skills. In order to index a batch of records successfully one needs to have a certain set of micro skills in order to be successful. Anyone can sit down and plug away at it. But in order to truly be successful and quick and efficient micro skills are necessary. Many of these skills I do not believe are being taught in our system today at least not at the public level. This is why it will be so crucial in the days ahead to have valuable resources for youth and adults to find quality training materials completely free. <br />
+      </p>
+      <p>Images for the Situation</p>
+        <img src="./images/woman-laptop.jpg" alt="Woman with laptop" width="50%">
+        <img src="./images/frustratedMan.jpg" alt="Frustrated Man" width="50%">
+        
       </ul>
-      <h3>Contribute</h3>
+      <h3>What needs to change and why</h3>
       <p>
-        [Written copy for the Contribute here]
+        While I do consider myself somewhat of a millennial, I think that we have a duty to revamp the way that we look at genealogical training. And build it from the ground up. My goal in life is to bridge the gap between boomer, genealogy, and millennial genealogy and into the future. Rather than constantly fight against new trends, I think we need to embrace, the shortened attention, spans and the ease at which to find relevant material. <br />
       </p>
-      <p>Images for the Contribute</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <p>One of my major inspirations is Joe Price with the BYU record linking Lamb who has done extensive work at bringing genealogy into a new age. Tools such as the map app PowerLinker, Reverse Indexing, and others have really made big strides amongst youth consultants, and the world his presentation on , the 10 X project is very motivating. At our current rate, we would be far into the millennium before we ever got anything accomplished. I believe that there is a great need to Hason this work and his presentation is a great motivator that seems very possible.
+      </p>
+      <p>Images for Changes</p>
+        <img src="./images/app2.png" alt="App Mockup No 2" width="50%">
+        <img src="./images/teen-phone.jpg" alt="Teen with phone" width="50%">
 
       </ul>
       <hr>
