--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles/styles.css">
     <title>WDD130 Home Page</title>
 </head>
 <body>
@@ -14,6 +15,20 @@
         <a href="genie/index.html">Personal Website</a>
         <a href="genie/site-plan.html">Personal Siteplan</a>
     </nav>  
-    <p>Cameron Briggs - WDD130</p>
+    <!-- <p>Cameron Briggs - WDD130</p> -->
+
+    <!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="card">
+  <img src="/images/reverseMe.jpg" alt="Cameron" style="width:200px">
+  <h1>Cameron Briggs</h1>
+  <p class="title">WDD130</p>
+  <p>Brigham Young University - Idaho</p>
+  <a href="#"><i class="fa fa-twitter"></i></a>
+  <a href="#"><i class="fa fa-linkedin"></i></a>
+  <a href="#"><i class="fa fa-facebook"></i></a>
+  <p><button>Contact</button></p>
+</div>
 </body>
 </html>
