--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <h1>Cameron Briggs</h1>
   <p class="title">WDD130</p>
   <p>Brigham Young University - Idaho</p>
-  <a href="#"><i class="fa fa-twitter"></i></a>
-  <a href="#"><i class="fa fa-linkedin"></i></a>
-  <a href="#"><i class="fa fa-facebook"></i></a>
+  <a href="https://www.facebook.com/cameronbriggs8706"><i class="fa fa-twitter"></i></a>
+  <a href="https://twitter.com/buddb8706"><i class="fa fa-linkedin"></i></a>
+  <a href="https://www.linkedin.com/in/cameronbriggs8706/"><i class="fa fa-facebook"></i></a>
   <p><button>Contact</button></p>
 </div>
 </body>
