--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
   <h1>Cameron Briggs</h1>
   <p class="title">WDD130</p>
   <p>Brigham Young University - Idaho</p>
-  <a href="https://www.facebook.com/cameronbriggs8706"><i class="fa fa-twitter"></i></a>
-  <a href="https://twitter.com/buddb8706"><i class="fa fa-linkedin"></i></a>
-  <a href="https://www.linkedin.com/in/cameronbriggs8706/"><i class="fa fa-facebook"></i></a>
-  <p><button>Contact</button></p>
+  <a href="https://www.facebook.com/cameronbriggs8706" target="_blank"><i class="fa fa-facebook"></i></a>
+  <a href="https://twitter.com/buddb8706" target="_blank"><i class="fa fa-twitter"></i></a>
+  <a href="https://www.linkedin.com/in/cameronbriggs8706/" target="_blank"><i class="fa fa-linkedin"></i></a>
+  <p><button>Fall 2023</button></p>
 </div>
 </body>
 </html>
