--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>WDD130 Home Page</title>
 </head>
@@ -20,7 +20,7 @@
 
 
 <div class="card">
-  <img src="/images/reverseMe.jpg" alt="Cameron" style="width:200px">
+  <img src="reverseMe.jpg" alt="Cameron" style="width:200px">
   <h1>Cameron Briggs</h1>
   <p class="title">WDD130</p>
   <p>Brigham Young University - Idaho</p>
