Fixed Footer on smallest devices

--- a/genie/index.html
+++ b/genie/index.html
@@ -39,7 +39,7 @@
         </section>
     </main>
     <footer>
-        <p>Genie Greenie &copy; 2023 - Cameron Briggs</p>
+        <p id="copyright">Genie Greenie &copy; 2023 - Cameron Briggs</p>
         <p><a href="site-plan.html">Site Plan</a></p>
     </footer>
 </div>
